# mustache4c

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml
.github/workflows/: ci-build.yml
src/: CMakeLists.txt  mustache.c  mustache.h
test/: CMakeLists.txt  json.c  json.h  test_spec.c
test/scripts/: maketests.py
